# xcmor

./: .flake8  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml  setup.cfg  test.py
.binder/: environment.yml
.github/workflows/: ci.yaml  pypi.yaml  testpypi-release.yaml
ci/: doc.yml  environment-no-optional-deps.yml  environment.yml
doc/: api.rst  cmor.md  conf.py  index.rst  whats-new.rst
doc/examples/: introduction.ipynb
xcmor/: __init__.py  datasets.py  log.py  mapping.py  resources.py  rules.py  table.py  utils.py  xcmor.py
xcmor/tables/: cf-variables.csv
xcmor/tests/: __init__.py  tables.py  test_rules.py  test_utils.py  test_xcmor.py
