[project]
name = "xcmor"
description = "In-memory cmorization with xarray"
readme = "README.rst"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["xarray", "metadata", "CF conventions", "cmor"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "xarray",
    "cf_xarray",
]
dynamic = ["version"]

[project.optional-dependencies]
all = ["matplotlib", "pint", "pint-xarray", "pooch"]

[project.urls]
homepage = "https://xcmor.readthedocs.io"
documentation = "https://xcmor.readthedocs.io"
repository = "https://github.com/larsbuntemeyer/xcmor.git"
changelog = "https://xcmor.readthedocs.io/en/latest/whats-new.html"

[build-system]
requires = [
    "xarray",
    "cf_xarray",
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["xcmor"]

#[tool.setuptools.exclude-package-data]
#xcmor = ["tests/*"]

[tool.setuptools_scm]
fallback_version = "999"
write_to = "xcmor/_version.py"
write_to_template= '__version__ = "{version}"'
tag_regex= "^(?P<prefix>v)?(?P<version>[^\\+]+)(?P<suffix>.*)?$"

[tool.black]
target-version = ["py38"]

[tool.ruff]
target-version = "py38"
builtins = ["ellipsis"]
exclude = [
    ".eggs",
    "doc",
]
# E402: module level import not at top of file
# E501: line too long - let black worry about that
# E731: do not assign a lambda expression, use a def
ignore = [
    "E203",
    "E402",
    "E501",
    "E731",
]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # Pyupgrade
    "UP",
]

[tool.ruff.isort]
known-first-party = ["xcmor"]
known-third-party = [
    "dask",
    "matplotlib",
    "numpy",
    "pandas",
    "pint",
    "pkg_resources",
    "pytest",
    "setuptools",
    "sphinx_autosummary_accessors",
    "xarray"
]

[tool.pytest]
python_files = "test_*.py"
testpaths = ["xcmor/tests"]

[tool.rstcheck]
report_level = "WARNING"
ignore_roles = [
    "pr",
    "issue",
]
ignore_directives = [
    "ipython",
    "autodata",
    "autosummary",
]

[tool.nbqa.md]
mdformat = true

[tool.mypy]
exclude = "doc|flycheck"
files = "xcmor/"
show_error_codes = true
warn_unused_ignores = true
warn_unreachable = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

[[tool.mypy.overrides]]
module=[
    "cftime",
    "pandas",
    "pooch",
    "pint",
    "matplotlib",
    "pytest",
    "shapely.geometry",
    "xarray.core.pycompat",
    "pint_xarray",
]
ignore_missing_imports = true

[tool.coverage.run]
omit = [
    "*/tests/*"
]
